# rtdjango

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.yml  pyproject.toml
rtserver/: manage.py
rtserver/chat/: consumers.py
rtserver/games/: models.py  urls.py  views.py
rtserver/games/migrations/: 0001_initial.py  0002_auto_20190930_1743.py  0002_game_code.py  0003_auto_20190930_1747.py  0003_gameresult_gameresultdetail.py  0004_auto_20190930_1748.py  0005_auto_20190930_1748.py  0006_auto_20190930_1748.py  0007_auto_20190930_1748.py  0008_auto_20190930_1749.py  0009_auto_20190930_1756.py  0010_auto_20190930_1757.py  0011_auto_20190930_1757.py  0012_auto_20190930_2239.py  0013_auto_20190930_2240.py  (+2 more)
rtserver/players/: models.py  urls.py  views.py
rtserver/rtserver/: routing.py  settings.py  urls.py  wsgi.py
rtserver/wsgames/: consumers.py  routing.py
server/: Dockerfile  manage.py  pyproject.toml
server/chat/: views.py
server/games/: admin.py  models.py  urls.py  views.py
server/games/migrations/: 0004_auto_20190930_1748.py  0005_auto_20190930_1748.py  0006_auto_20190930_1748.py  0008_auto_20190930_1749.py  0009_auto_20190930_1756.py  0011_auto_20190930_1757.py  0015_auto_20191005_1749.py  0016_auto_20210511_2334.py
server/players/: models.py  urls.py  views.py
server/players/migrations/: 0002_auto_20190930_1614.py  0003_auto_20190930_2240.py  0004_auto_20190930_2240.py  0007_auto_20210511_2333.py
server/rtserver/: routing.py  settings.py  urls.py  wsgi.py
server/wsgames/: consumers.py  routing.py
(+7 files in other folders)
